# Robotic_PDS

./: .gitignore  PDS.cpp  PDS.h  README.md  README_TELEMETRY_SYSTEM.md  TODO.md  TODO_TELEMETRY.md  flash_daemon.py  main.cpp  main.py  network_setup.md  param_io.py  requirements.txt  setup_rpi5.sh  spi_receiver.py  status_leds.py  tab_visuals.py
.github/agents/: do.agent.md
Doku/: Flash_Implementierung.md  Param_Implementierung.md
Windows_Scripts/: README.md  setup_windows_x32.bat
Windows_Scripts/pc_flash_tool/: README.md  bt_flash_protocol.py  bt_flash_sender.py  bt_targets.json
docs/: DEVELOPER_README.md  README.md  SETUP_GUIDE.md  USER.md  network_setup.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.svelte  index.css
pc-backend/: channels.csv  config.yaml  go.mod  go.sum  main.go  parameters.csv  robot_viz.json
pc-backend/frontend/: embed.go
pc_setup/: README.md  setup_windows.bat
pc_setup/pc_flash_tool/: README.md  bt_flash_sender.py  (+2 more)
rpi-bridge/: CMakeLists.txt  deploy.sh  toolchain-aarch64.cmake
rpi-bridge/config/: bridge.conf
rpi-bridge/src/: gpio.c  gpio.h  main.c  protocol.c  protocol.h  spi.c  spi.h  stats.c  stats.h  udp.c  udp.h
rpi5_monitor/: config.py  main.py  network_worker.py  param_config.json  setup_rpi5.sh  visuals_overlays.json
rpi_zero_node/: bt_flash_receiver.py  flash_daemon.py  setup_node.sh  spi_receiver.py  status_leds.py
scripts/: cross_compile_bridge.sh  install_windows.ps1  run_simulate.ps1  setup_rpi.sh
shared/: protocol.md
teensy/: platformio.ini
teensy_firmware/: extra_script.py  platformio.ini
(+122 files in other folders)
